--- a/synthese-frontend/src/styles.css
+++ b/synthese-frontend/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+.main{
+    background-color: rgb(34, 50, 64);
+    color: white;
+}
