--- a/synthese-frontend/src/app/app.component.html
+++ b/synthese-frontend/src/app/app.component.html
@@ -1,2 +1,5 @@
 <navbar />
-<router-outlet></router-outlet>
+<div *ngIf="loading()" class="text-center pt-5">
+    <p-progressSpinner [style]="{width: '150px', height: '150px'}" styleClass="custom-spinner" strokeWidth="8" fill="var(--surface-ground)" animationDuration=".5s"></p-progressSpinner>
+</div>
+<router-outlet *ngIf="!loading()"></router-outlet>
