created admin home page

--- a/synthese-frontend/src/app/components/admin/admin.component.html
+++ b/synthese-frontend/src/app/components/admin/admin.component.html
@@ -1,1 +1,8 @@
-<p>admin works!</p>
+<div class="container">
+    <h1 class="text-center">Votre établissement n'est pas encore configuré!</h1>
+    <div class="d-flex justify-content-center">
+        <a href="/configure">
+            <p-button label="Configurer un établissement" class="p-button-outline p-button-rounded p-button-success" ></p-button>
+        </a>
+    </div>
+</div>
