added back and logout button from nav

--- a/synthese-frontend/src/app/components/navbar/navbar.component.html
+++ b/synthese-frontend/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p class="m-5">ProjetSynthese Inc.</p>
+<div class="bg-p p-2 navbar mb-5">
+    <p class="mx-5 my-2 text-light">ProjetSynthese Inc.</p>
+    <div class="d-flex justify-content-right">
+        <button class="btn btn-outline-light mx-2" routerLink="/">Home</button>
+        <button class="btn btn-outline-light mx-2" routerLink="/login">Logout</button>
+    </div>
+</div>
