Logout button works and removing it if logged out

--- a/synthese-frontend/src/app/components/navbar/navbar.component.html
+++ b/synthese-frontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="bg-p p-2 navbar mb-5">
     <p class="mx-5 my-2 text-light">ProjetSynthese Inc.</p>
     <div class="d-flex justify-content-right">
-        <button class="btn btn-outline-light mx-2" routerLink="/">Home</button>
-        <button class="btn btn-outline-light mx-2" routerLink="/login">Logout</button>
+        <button class="btn btn-outline-light mx-2" routerLink="/">Accueil</button>
+        <button class="btn btn-outline-light mx-2" *ngIf="isLoggedIn()" (click)="logout()">Déconnexion</button>
     </div>
 </div>
