Using parseError in configure component

--- a/synthese-frontend/src/app/components/admin/configure/configure.component.html
+++ b/synthese-frontend/src/app/components/admin/configure/configure.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <p-card>
         <ng-template pTemplate="header">
-            <h1 class="text-center bg-light-g p-3">Configuration de votre établissement</h1>
+            <h1 class="text-center bg-light-g p-3">Configuration d'un établissement</h1>
         </ng-template>
         <div class="row" [formGroup]="configuration">
             <div class="col-12 d-flex justify-content-center my-3">
