--- a/synthese-frontend/src/app/components/admin/establishment/create-account/manager/manager.component.html
+++ b/synthese-frontend/src/app/components/admin/establishment/create-account/manager/manager.component.html
@@ -1,1 +1,93 @@
-<p>manager works!</p>
+<p-card>
+    <ng-template pTemplate="header">
+        <h1 class="text-center bg-light-g p-3">Ajouter un gestionnaire</h1>
+    </ng-template>
+    <div *ngIf="loading()" class="text-center pt-5">
+        <p-progressSpinner [style]="{width: '150px', height: '150px'}" styleClass="custom-spinner" strokeWidth="8" fill="var(--surface-ground)" animationDuration=".5s"></p-progressSpinner>
+    </div>
+    <div *ngIf="!loading()" class="row">
+        <h3>Recherche:</h3>
+        <h5 *ngIf="searchError != ''" class="text-danger">{{searchError}}</h5>
+        <div [formGroup]="searchForm" class="row">
+            <div class="col-6 d-flex justify-content-center my-3">
+                <span class="p-float-label row col-12">
+                    <input id="lastName" type="text" pInputText formControlName="lastName">
+                    <label for="lastName">Nom du gestionnaire</label>
+                </span>
+            </div>
+            <div class="col-6 d-flex justify-content-center my-3">
+                <span class="p-float-label row col-12">
+                    <input id="firstName" type="text" pInputText formControlName="firstName">
+                    <label for="firstName">Prénom du gestionnaire</label>
+                </span>
+            </div>
+        </div>
+        <div class="col-12 d-flex justify-content-center my-3">
+            <button pButton type="button" label="Trouver" (click)="search()"></button>
+        </div>
+    </div>
+    <div *ngIf="managers.length > 0">
+        <h3>Etudiants trouvés:</h3>
+        <p-table [value]="managers" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10,20,50]" [responsive]="true">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Nom</th>
+                    <th>Prénom</th>
+                    <th>Matricule</th>
+                    <th>Actions</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-manager>
+                <tr>
+                    <td>{{manager.lastName}}</td>
+                    <td>{{manager.firstName}}</td>
+                    <td>{{manager.username}}</td>
+                    <td>
+                        <button pButton type="button" label="Ajouter" (click)="addManager(manager)"></button>
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</p-card>
+<h1 class="text-center my-2">OU</h1>
+<p-card class="mt-4">
+    <ng-template pTemplate="header">
+        <h1 class="text-center bg-light-g p-3">Création d'un gestionnaire</h1>
+    </ng-template>
+    <div class="row" [formGroup]="form">
+        <div class="col-12 d-flex justify-content-center my-3">
+            <span class="p-float-label row col-12">
+                <input id="lastName" type="text" pInputText formControlName="lastName">
+                <label for="lastName">Nom de l'utilisateur</label>
+            </span>
+        </div>
+        <div class="col-12 d-flex justify-content-center my-3">
+            <span class="p-float-label row col-12">
+                <input id="firstName" type="text" pInputText formControlName="firstName">
+                <label for="firstName">Prénom de l'utilisateur</label>
+            </span>
+        </div>
+        <div class="col-12 d-flex justify-content-center my-3">
+            <span class="p-float-label row col-12">
+                <input id="usernameLength" type="number" min="6" max="12" pInputText formControlName="usernameLength">
+                <label for="usernameLength">Longueur du matricule</label>
+            </span>
+        </div>
+        <div class="col-12 d-flex justify-content-center my-3">
+            <span class="row col-12">
+                <p>Matricule de l'utilisateur: </p><strong>{{getGeneratedUsername()}}</strong>
+            </span>
+        </div>
+
+        <div class="col-12 d-flex justify-content-center my-3">
+            <span class="row col-12">
+                <p>Mot de passe généré: </p><strong>{{getGeneratedPassword()}}</strong>
+            </span>
+        </div>
+    </div>
+</p-card>
+<p-toast position="bottom-right"></p-toast>
+<div class="col-12 d-flex justify-content-center my-3">
+    <button pButton type="button" label="Créer" (click)="createManager()"></button>
+</div>
