--- a/synthese-frontend/src/app/components/admin/establishment/establishment.component.html
+++ b/synthese-frontend/src/app/components/admin/establishment/establishment.component.html
@@ -14,7 +14,7 @@
                 <ng-template pTemplate="footer">
                 <button routerLink="createAccount/student" pButton type="button" label="Étudiant" class=" mx-2"></button>
                 <button routerLink="createAccount/teacher" pButton type="button" label="Enseignant" class="p-button-secondary mx-2"></button>
-                <button routerLink="createAccount/manager" pButton type="button" label="Gérant" class="p-button-outlined mx-2"></button>
+                <button routerLink="createAccount/manager" pButton type="button" label="Gestionnaire" class="p-button-outlined mx-2"></button>
                 </ng-template>
             </p-card>
         </div>
