--- a/synthese-frontend/src/app/components/admin/admin.component.html
+++ b/synthese-frontend/src/app/components/admin/admin.component.html
@@ -6,23 +6,25 @@
     </div>
     <div *ngIf="hasEstablishments()" class="row d-flex justify-content-center">
         <p-card *ngFor="let establishment of getEstablishments()" [header]="establishment.name"
-            subheader="Établissement scolaire" class="col-6 p-4">
+            subheader="Établissement scolaire" class="col-xl-6 p-4">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12">
                     <strong class="d-inline">Adresse:</strong>
                     <p class="d-inline"> {{establishment.address}}</p>
                 </div>
-                <div class="col-6 text-end">
+            </div>
+            <div class="row">
+                <div class="col-12">
                     <strong class="d-inline">Numéro de telephone:</strong>
-                    <p class="d-inline"> {{establishment.phone}}</p>
+                    <p class="d-inline"> {{getPhone(establishment.phone)}}</p>
                 </div>
             </div>
             <div class="row d-flex justify-content-between">
-                <div class="col-6">
+                <div class="col-xl-6">
                     <strong class="d-inline">Jours ouverts:</strong>
                     <p class="d-inline"> {{getOpenDays(establishment.daysPerWeek)}}</p>
                 </div>
-                <div class="col-6 text-end">
+                <div class="col-xl-6 text-xl-end">
                     <strong class="d-inline">Heures d'ouvertures:</strong>
                     <p class="d-inline"> {{getOpenHours(establishment.openTime,establishment.closeTime)}}</p>
                 </div>
