Added router link for modify establishment page

--- a/synthese-frontend/src/app/components/admin/establishment/establishment.component.html
+++ b/synthese-frontend/src/app/components/admin/establishment/establishment.component.html
@@ -4,7 +4,7 @@
             <p-card header="Modifier l'établissement">
                 Vous pouvez modifier l'établissement ici.
                 <ng-template pTemplate="footer">
-                    <p-button label="Modifier" icon="pi pi-wrench" iconPos="right"></p-button>
+                    <p-button routerLink="modify" label="Modifier" icon="pi pi-wrench" iconPos="right"></p-button>
                 </ng-template>
             </p-card>
         </div>
