--- a/synthese-frontend/src/app/components/teacher/teacher.component.html
+++ b/synthese-frontend/src/app/components/teacher/teacher.component.html
@@ -1,1 +1,12 @@
-<p>teacher works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-6 p-4">
+            <p-card header="Créer votre horaire">
+                Vous pouvez créer votre horaire à partir du calendrier.
+                <ng-template pTemplate="footer">
+                <button routerLink="createSchedule" pButton type="button" label="Créer" class="p-button mx-2"></button>
+                </ng-template>
+            </p-card>
+        </div>
+    </div>    
+</div>
